--- a/3-exec-sync/ffi/crate_syn/Cargo.toml
+++ b/3-exec-sync/ffi/crate_syn/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+syn = { version = "2", features = ["full"] }
+quote = { version = "1" }
